# macc

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MACC.md  Makefile  README.md  SECURITY.md
adapters/shared/: Cargo.toml
adapters/shared/src/: capabilities.rs  catalog.rs  diag.rs  error_normalizer.rs  fetch.rs  lib.rs  schema.rs  url_parsing.rs
cli/: Cargo.toml  build.rs
cli/src/: main.rs  test_support.rs
cli/src/commands/: apply.rs  backups.rs  catalog.rs  catalog_support.rs  clear.rs  context.rs  coordinator.rs  doctor.rs  init.rs  install.rs  lifecycle_support.rs  logs.rs  migrate.rs  mod.rs  plan.rs  quickstart.rs  restore.rs  tool.rs  web.rs  worktree.rs
cli/src/coordinator/: command.rs  legacy_helpers.rs  mod.rs  render.rs  state_runtime.rs
cli/src/services/: engine_provider.rs  interaction.rs  mod.rs
core/: Cargo.toml  build.rs
core/src/: automation.rs  catalog.rs  commit_message.rs  coordinator.rs  coordinator_storage.rs  doctor.rs  engine.rs  git.rs  lib.rs  mcp_json.rs  packages.rs  skills.rs  structured_merge.rs  user_backup.rs  worktree.rs
core/src/catalog/: service.rs
core/src/config/: migrate.rs  mod.rs
core/src/coordinator/: args.rs  commit_reconciler.rs  control_plane.rs  engine.rs  error_normalizer.rs  helpers.rs  ipc.rs  logs.rs  model.rs  normalizers.rs  prd_auditor.rs  rate_limit.rs  runtime.rs  session_manager.rs  state.rs  state_runtime.rs  task_selector.rs  types.rs
core/src/domain/: backups.rs  catalog.rs  mod.rs  worktree.rs
core/src/plan/: builders.rs  diff.rs  diff_view.rs  mod.rs  ops.rs
core/src/resolve/: mod.rs
core/src/security/: mod.rs  secret_scan.rs
core/src/service/: backups.rs  catalog.rs  clear.rs  context.rs  coordinator.rs  coordinator_workflow.rs  diagnostic.rs  interaction.rs  lifecycle.rs  logs.rs  migrate.rs  mod.rs  project.rs  task_runner.rs  tooling.rs  worktree.rs
core/tests/: forbidden_io.rs  init_integration.rs  plan_apply_integration.rs  plan_operations.rs  rate_limit_integration.rs  remote_search.rs  tool_name_guardrail.rs
tui/: Cargo.toml
tui/src/: lib.rs  main.rs  screen.rs  state.rs  ui.rs
(+204 files in other folders)
