[package]
name = "macc-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "macc"
path = "src/main.rs"

[dependencies]
macc-core = { path = "../core" }
macc-tui = { path = "../tui" }
macc-adapter-shared = { path = "../adapters/shared" }
macc-registry = { path = "../registry" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.149"
chrono = "0.4"
axum = "0.7"
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
zip = "2.2"
