[package]
name = "macc-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
inventory = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
similar = { version = "2.4", features = ["text", "unicode"] }
serde_json = "1.0.149"
chrono = "0.4"
regex = "1.10"
sha2 = "0.10"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
async-trait = "0.1"
tokio = { version = "1", features = ["process", "rt", "rt-multi-thread", "time", "sync", "net", "io-util", "macros", "signal"] }
tracing = "0.1"
