[package]
name = "macc-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26.0"
crossterm = { version = "0.27.0", features = ["events"] }
anyhow = "1.0"
macc-core = { path = "../core" }
macc-adapter-shared = { path = "../adapters/shared" }
macc-registry = { path = "../registry" }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
