[package]
name = "macc-adapter-shared"
version = "0.1.0"
edition = "2021"

[dependencies]
macc-core = { path = "../../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = "0.4"
regex = "1.10"
sha2 = "0.10"
zip = "2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
